--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,11 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-       
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.44</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -63,5 +67,5 @@
             </plugin>
         </plugins>
     </build>
-    <name>HBaseLogAnalyzer</name>
+    <name>HBaseLogger</name>
 </project>
